refactor validation service to consistently return only one error message at most